# CNN-from-scratch

./: .dockerignore  .gitignore  DERMASCAN_PLAN.md  DOCKER.md  Dockerfile  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.yml  environment.yml  pyproject.toml
dermascan/: PROJECT_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  requirements.txt
dermascan/api/: __init__.py  app.py
dermascan/configs/: dermascan_model.yaml
dermascan/database/: __init__.py  conditions.py
dermascan/inference/: __init__.py  predictor.py
dermascan/models/: __init__.py
dermascan/preprocessing/: __init__.py  image_processor.py
dermascan/scripts/: __init__.py  docker_build.sh  docker_deploy.sh  docker_run.sh  download_data.py  run_server.sh  train_dermascan.py
frontend/static/css/: styles.css
frontend/templates/: index.html
nginx/: nginx.conf
notebooks/: 00_sanity_checks.ipynb  training_report.ipynb
src/cli/: evaluate.py  export.py  train.py
src/configs/: cifar10_vgg_tiny.yaml  mnist_lenet.yaml
src/core/: initializers.py  losses.py  metrics.py  optim.py  regularizers.py  tensor.py  utils.py
src/data/: cifar10.py  mnist.py
src/layers/: activations.py  base.py  batchnorm.py  conv2d.py  dense.py  dropout.py  pooling.py
src/models/: convnet_small.py  sequential.py
src/train/: callbacks.py  logger.py  loop.py  scheduler.py
tests/: test_batchnorm_backward.py  test_conv_backward.py  test_dense_backward.py  test_grad_check_numeric.py  test_im2col.py  test_losses_grad.py  test_pool_backward.py  test_regularizers.py  test_sequential_pass.py
(+1 files in other folders)
