[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnn-from-scratch"
version = "0.1.0"
description = "CNN from scratch in NumPy, no autograd. Educational yet rigorous."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "ravlad"}]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4.0",
  "black>=24.0",
  "mypy>=1.10",
  "ipykernel>=6.29",
]

[tool.setuptools.package-dir]
# map "src" as package root
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "notebooks", "reports", "data"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
